alignment fixes done

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,12 @@ body {
   margin-right: 30px;
   gap: 20px;
 }
+#menulinks {
+  display: flex;
+  flex-direction: row;
+  margin-right: 30px;
+  gap: 20px;
+}
 #hamburger {
   display: none;
 }
@@ -522,6 +528,13 @@ button:hover {
     border-radius: 5px;
     align-items: center;
     padding-bottom: 10px;
+    border: 4px solid #000000;
+    color: #fff;
+    text-align: center;
+    font-family: "Lilita One";
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
   }
   #menulinks {
     display: none;
